manifests/perses-operatorNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/created-by: perses-operator
    app.kubernetes.io/name: perses-operator
    app.kubernetes.io/part-of: perses-operator
    app.kubernetes.io/version: 0.5.0
  name: perses-operator
  namespace: monitoring
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: https
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/created-by: perses-operator
      app.kubernetes.io/name: perses-operator
      app.kubernetes.io/part-of: perses-operator
  policyTypes:
  - Egress
  - Ingress
